--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "grunt-contrib-less": "^2.0.0",
     "grunt-contrib-watch": "^1.1.0",
     "grunt-newer": "^1.2.0",
+    "grunt-real-favicon": "^0.2.2",
     "serve-static": "^1.11.1"
   },
   "keywords": [
