--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "dependencies": {},
   "devDependencies": {
     "connect": "^3.5.0",
-    "express": "~4.14.0",
+    "cors": "^2.8.5",
+    "express": "~4.16.4",
     "grunt": "^1.0.1",
     "grunt-batch": "^0.2.4",
     "grunt-cli": "^1.2.0",
@@ -17,7 +18,7 @@
     "grunt-contrib-less": "^2.0.0",
     "grunt-contrib-watch": "^1.1.0",
     "grunt-newer": "^1.2.0",
-    "grunt-real-favicon": "^0.2.2",
+    "grunt-real-favicon": "^0.2.3",
     "serve-static": "^1.11.1"
   },
   "keywords": [
