--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "readmeFilename": "TODO",
   "dependencies": {},
   "devDependencies": {
+    "cheerio": "^1.0.0-rc.3",
+    "chrome-launcher": "^0.11.2",
     "connect": "^3.5.0",
     "cors": "^2.8.5",
     "express": "~4.16.4",
@@ -20,6 +22,8 @@
     "grunt-newer": "^1.2.0",
     "grunt-real-favicon": "^0.2.3",
     "serve-static": "^1.11.1"
+    "lighthouse": "^5.2.0",
+    "simplecrawler": "^1.1.8",
   },
   "keywords": [
     "bhv",
